<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_5sdp"
        android:background="@color/primary"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconBack"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="2dp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/white"
            />

        <TextView
            android:id="@+id/titleProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_goneMarginStart="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iconBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iconBack"
            app:layout_constraintTop_toTopOf="@id/iconBack"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout1"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        android:outlineSpotShadowColor="@color/primary"
        tools:ignore="UnusedAttribute">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            >


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileImage"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                android:scaleType="centerCrop"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_person"
                android:padding="@dimen/_2sdp"
                />


            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileImage"
                android:paddingTop="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp"
                style="@style/textColorPrimaryBlack"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userName"
                android:padding="@dimen/_1sdp"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/secondary_text"
                android:textStyle="bold"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userEmail"
                android:layout_marginTop="@dimen/_5sdp"
                >

                <LinearLayout
                    android:id="@+id/linearLayoutUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/linearLayoutView"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    >
                    <TextView
                        android:id="@+id/uploadCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="@dimen/_12sdp"
                        style="@style/textColorPrimaryBlack"
                        android:layout_marginBottom="@dimen/_5sdp"
                        />
                    <TextView
                        android:id="@+id/textTitleUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/uploadCount"
                        android:text="@string/upload"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/secondary_text"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearLayoutView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/linearLayoutUpload"
                    app:layout_constraintEnd_toStartOf="@id/linearLayoutDownload"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    >

                    <TextView
                        android:id="@+id/approvedCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        style="@style/textColorPrimaryBlack"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/textTitleApproved"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/uploadCount"
                        android:text="@string/approved"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/secondary_text"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearLayoutDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/linearLayoutView"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    >
                    <TextView
                        android:id="@+id/rejectedCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="@dimen/_12sdp"
                        style="@style/textColorPrimaryBlack"
                        android:layout_marginBottom="@dimen/_5sdp"
                        />
                    <TextView
                        android:id="@+id/textTitleRejected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/uploadCount"
                        android:text="@string/rejected"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/secondary_text"
                        />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout2"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        android:outlineSpotShadowColor="@color/primary"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/verificationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:padding="@dimen/_5sdp"
                android:textAlignment="center"
                android:textSize="@dimen/_10ssp"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4D0D1128"
        android:visibility="gone"
        >
        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/white"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>